--- a/vi/hoc-tieng-anh-hieu-qua.html
+++ b/vi/hoc-tieng-anh-hieu-qua.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Cách Học Tiếng Anh Hiệu Quả:<br>Hành Trình và Lời Khuyên của Tôi</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Tính Nhất Quán và Kiên Trì: Trò Chơi Dài Hạn Là Trò Chơi Duy Nhất</h3>
-            <p>Cuối cùng, và có lẽ đây là điều quan trọng nhất tôi đã học được trong hành trình của mình: <strong>tính nhất quán và kiên trì</strong> là tất cả. Việc học ngôn ngữ không phải là một cuộc chạy nước rút; mà là một cuộc chạy marathon. Sẽ có những thăng trầm, những khoảnh khắc thất vọng, và những lúc bạn cảm thấy như mình không có tiến bộ. Nhưng bạn phải tiếp tục! <strong>Thiết lập một lịch học thường xuyên</strong> và gắn bó với nó càng nhiều càng tốt, ngay cả khi chỉ là 30 phút mỗi ngày. <strong>Động lực sẽ dao động</strong>, vì vậy bạn cần kỷ luật. Ăn mừng những chiến thắng nhỏ của mình, đặt kỳ vọng thực tế và cố gắng tìm niềm vui trong chính quá trình. Hãy nhớ <strong>theo dõi tiến trình của bạn</strong> (như tôi đã làm với bảng tính của mình!) và định kỳ kiểm tra mục tiêu và phương pháp học của bạn để đảm bảo chúng vẫn hiệu quả. Đón nhận những thách thức, học hỏi từ những sai lầm của bạn, và quan trọng nhất, <strong>đừng từ bỏ!</strong> Sự trôi chảy hoàn toàn có thể đạt được với nỗ lực nhất quán, các tài nguyên phù hợp và thái độ tích cực. Và khi bạn tiến bộ, hãy nhớ kiểm tra trình độ của mình và thực hành những gì bạn đã học. Để đánh giá và thực hành đáng tin cậy trong ngữ pháp, sử dụng tiếng Anh, từ vựng và đọc, tôi cá nhân khuyên bạn nên sử dụng <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Đó là một nguồn tài nguyên tuyệt vời của các bài kiểm tra tiếng Anh miễn phí để đánh giá tiến bộ của bạn và giữ cho kỹ năng của bạn sắc bén.</p>
+            <p>Cuối cùng, và có lẽ đây là điều quan trọng nhất tôi đã học được trong hành trình của mình: <strong>tính nhất quán và kiên trì</strong> là tất cả. Việc học ngôn ngữ không phải là một cuộc chạy nước rút; mà là một cuộc chạy marathon. Sẽ có những thăng trầm, những khoảnh khắc thất vọng, và những lúc bạn cảm thấy như mình không có tiến bộ. Nhưng bạn phải tiếp tục! <strong>Thiết lập một lịch học thường xuyên</strong> và gắn bó với nó càng nhiều càng tốt, ngay cả khi chỉ là 30 phút mỗi ngày. <strong>Động lực sẽ dao động</strong>, vì vậy bạn cần kỷ luật. Ăn mừng những chiến thắng nhỏ của mình, đặt kỳ vọng thực tế và cố gắng tìm niềm vui trong chính quá trình. Hãy nhớ <strong>theo dõi tiến trình của bạn</strong> (như tôi đã làm với bảng tính của mình!) và định kỳ kiểm tra mục tiêu và phương pháp học của bạn để đảm bảo chúng vẫn hiệu quả. Đón nhận những thách thức, học hỏi từ những sai lầm của bạn, và quan trọng nhất, <strong>đừng từ bỏ!</strong> Sự trôi chảy hoàn toàn có thể đạt được với nỗ lực nhất quán, các tài nguyên phù hợp và thái độ tích cực. Và khi bạn tiến bộ, hãy nhớ kiểm tra trình độ của mình và thực hành những gì bạn đã học. Để đánh giá và thực hành đáng tin cậy trong ngữ pháp, sử dụng tiếng Anh, từ vựng và đọc, tôi cá nhân khuyên bạn nên sử dụng <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Đó là một nguồn tài nguyên tuyệt vời của các bài kiểm tra tiếng Anh miễn phí để đánh giá tiến bộ của bạn và giữ cho kỹ năng của bạn sắc bén.</p>
             <div class="tip-box">
                 <div class="tip-title">Mẹo:</div>
                 <p><strong>Biến việc học tiếng Anh thành một <em>thói quen</em>, không chỉ là sở thích. Tạo một lịch học thực tế và gắn bó với nó, ngay cả khi động lực giảm sút. Ăn mừng những chiến thắng nhỏ và nhớ rằng – kiên trì là chìa khóa cuối cùng! Và đừng quên thường xuyên đánh giá kỹ năng của bạn bằng cách sử dụng các tài nguyên như englishtests.online để theo dõi sự cải thiện của bạn.</strong></p>
@@ -422,7 +422,7 @@
     "publisher": {
         "@type": "Organization",
         "name": "englishtests.online",
-        "url": "https://englishtests.online"
+        "url": "https://englishtests.online/"
     },
     "url": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua",
     "mainEntityOfPage": {
