--- a/zh-CN/xuexi-yingyu-gaoxiaolv.html
+++ b/zh-CN/xuexi-yingyu-gaoxiaolv.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">如何有效学习英语：<br>我的学习之旅与建议</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. 持续性和坚持：长期游戏是唯一的游戏</h3>
-            <p>最后，这可能是我在学习之旅中学到的最重要的事情：<strong>持续性和坚持</strong>就是一切。语言习得不是短跑；而是马拉松。会有起伏，会有挫折的时刻，也会有你感觉自己没有进步的时候。但你必须坚持下去！<strong>建立一个规律的学习时间表</strong>并尽可能坚持，即使每天只有30分钟。<strong>动力会波动</strong>，所以你需要纪律。庆祝你的小胜利，设定现实的期望，并尝试在过程本身中找到乐趣。记得<strong>追踪你的进步</strong>（就像我用我的电子表格一样！）并定期检查你的目标和学习方法，确保它们仍然有效。拥抱挑战，从错误中学习，最重要的是，<strong>不要放弃！</strong>通过持续的努力、合适的资源和积极的态度，流利是绝对可以实现的。在你进步的过程中，记得检查你的水平并练习你所学的内容。对于语法、英语使用、词汇和阅读的可靠评估和练习，我个人推荐<a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>。这是一个很好的免费英语测试资源，可以衡量你的进步并保持你的技能锐利。</p>
+            <p>最后，这可能是我在学习之旅中学到的最重要的事情：<strong>持续性和坚持</strong>就是一切。语言习得不是短跑；而是马拉松。会有起伏，会有挫折的时刻，也会有你感觉自己没有进步的时候。但你必须坚持下去！<strong>建立一个规律的学习时间表</strong>并尽可能坚持，即使每天只有30分钟。<strong>动力会波动</strong>，所以你需要纪律。庆祝你的小胜利，设定现实的期望，并尝试在过程本身中找到乐趣。记得<strong>追踪你的进步</strong>（就像我用我的电子表格一样！）并定期检查你的目标和学习方法，确保它们仍然有效。拥抱挑战，从错误中学习，最重要的是，<strong>不要放弃！</strong>通过持续的努力、合适的资源和积极的态度，流利是绝对可以实现的。在你进步的过程中，记得检查你的水平并练习你所学的内容。对于语法、英语使用、词汇和阅读的可靠评估和练习，我个人推荐<a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>。这是一个很好的免费英语测试资源，可以衡量你的进步并保持你的技能锐利。</p>
             <div class="tip-box">
                 <div class="tip-title">小贴士：</div>
                 <p><strong>使英语学习成为一种<em>习惯</em>，而不仅仅是一种爱好。创建一个现实的学习时间表并坚持下去，即使在动力下降时。庆祝小胜利，记住——坚持是最终的关键！别忘了使用像englishtests.online这样的资源定期评估你的技能，以跟踪你的进步。</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv",
         "mainEntityOfPage": {
