--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         }
 
         /* Add a blue line after FindWord */
-        .dropdown-menu a:nth-child(5)::after {
+        .dropdown-menu a:nth-child(6)::after {
             content: '';
             position: absolute;
             left: 0;
@@ -524,6 +524,7 @@
             <a href="https://englishtests.online/terms-of-use">Terms of Use</a>
             <a href="https://englishtests.online/privacy-policy">Privacy Policy</a>
             <a href="https://englishtests.online/findword">FindWord Puzzle <img src="language.png" style="float: right; margin-left: 5px; position: relative; top: -2px; max-width: 24px; max-height: 24px; width: auto; height: auto;"></a>
+            <a href="https://codingtests.online">Coding Tests Online</a>
         </div>
     </div>
 
@@ -539,6 +540,7 @@
         <a href="https://englishtests.online/c1-english-tests" class="level-button c1">C1 English tests</a>
         <a href="https://englishtests.online/c2-english-tests" class="level-button c2">C2 English tests</a>
         <a href="https://englishtests.online/findword" class="level-button findword">FindWord</a>
+        <a href="https://codingtests.online" class="level-button coding-tests-online">Coding Tests Online</a>
     </div>
 
     <!-- Cookie Notice Window -->
