--- a/a1-english-tests.html
+++ b/a1-english-tests.html
@@ -232,7 +232,7 @@
         }
 
         /* Add a blue line after FindWord */
-        .dropdown-menu a:nth-child(5)::after {
+        .dropdown-menu a:nth-child(6)::after {
             content: '';
             position: absolute;
             left: 0;
@@ -438,6 +438,7 @@
             <a href="https://englishtests.online/terms-of-use">Terms of Use</a>
             <a href="https://englishtests.online/privacy-policy">Privacy Policy</a>
             <a href="https://englishtests.online/findword">FindWord Puzzle <img src="language.png" style="float: right; margin-left: 5px; position: relative; top: -2px; max-width: 24px; max-height: 24px; width: auto; height: auto;"></a>
+            <a href="https://codingtests.online">Coding Tests Online</a>
         </div>
     </div>
 
