--- a/learn-english-effectively.html
+++ b/learn-english-effectively.html
@@ -411,28 +411,226 @@
     </footer>
     
     <!-- Structured data for better SEO (JSON-LD) -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "How to Learn English Effectively: My Journey and Advice",
-        "description": "Discover proven strategies to learn English effectively with our comprehensive guide based on real-world experience.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/learn-english-effectively",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/learn-english-effectively"
-        },
-        "keywords": "learn english effectively, english learning strategies, english immersion, english learning resources"
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "How to Learn English Effectively: My Journey and Advice",
+  "description": "A comprehensive guide to learning English effectively based on real experience. Covers goal setting, active engagement, immersion, personalized learning strategies, listening, speaking, reading, writing, grammar, vocabulary building, technology tools including AI assistants, and the importance of consistency.",
+  "keywords": [
+    "learn english effectively",
+    "english learning strategies",
+    "english immersion",
+    "personalized english learning",
+    "english listening practice",
+    "english speaking fluency",
+    "english reading comprehension",
+    "english writing practice",
+    "english grammar tips",
+    "english vocabulary building",
+    "language learning technology",
+    "AI for language learning",
+    "english learning consistency"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/learn-english-effectively"
+  },
+  "url": "https://englishtests.online/learn-english-effectively",
+  "inLanguage": "en",
+  "articleSection": "English Learning",
+  "articleBody": "Learn how to effectively learn English with practical advice covering goal setting, active engagement, immersion, personalized learning, listening, speaking, reading, writing, grammar, vocabulary, technology tools, and consistency strategies.",
+  "about": {
+    "@type": "Thing",
+    "name": "English Language Learning"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Education",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Communication",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Artificial Intelligence",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Artificial Intelligence",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 Proven Strategies to Master the English Language",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "English Learners"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/learn-english-effectively"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Setting Clear Goals",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Active Engagement is Key",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Immerse Yourself",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Personalized Learning",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Train Your Ear",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Speak Up!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Reading Widely",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Writing Practice",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Grammar Matters",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Vocabulary is Power",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Tech is Your Friend",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/learn-english-effectively"
+      },
+      "name": "Consistency and Persistence",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "All Levels",
+  "educationalUse": "Self-Study",
+  "interactivityType": "Expositive",
+  "learningResourceType": "Guide",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
