--- a/hi/angreji-sikhne-ke-saral-tarike.html
+++ b/hi/angreji-sikhne-ke-saral-tarike.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "अंग्रेज़ी प्रभावी ढंग से कैसे सीखें: मेरी यात्रा और सलाह",
-        "description": "वास्तविक दुनिया के अनुभव पर आधारित हमारी व्यापक मार्गदर्शिका के साथ अंग्रेज़ी प्रभावी ढंग से सीखने के लिए सिद्ध रणनीतियों का पता लगाएं।",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
-        },
-        "keywords": "अंग्रेजी प्रभावी ढंग से सीखें, अंग्रेजी सीखने की रणनीतियाँ, अंग्रेजी में आत्मसात होना, अंग्रेजी सीखने के संसाधन"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "अंग्रेजी सीखने के सरल तरीके: मेरी यात्रा और सलाह",
+  "description": "वास्तविक अनुभव पर आधारित अंग्रेजी प्रभावी ढंग से सीखने के लिए एक व्यापक मार्गदर्शिका। इसमें लक्ष्य निर्धारण, सक्रिय भागीदारी, भाषा में डूबना, व्यक्तिगत सीखने की रणनीतियां, सुनना, बोलना, पढ़ना, लिखना, व्याकरण, शब्दावली निर्माण, एआई सहायकों सहित प्रौद्योगिकी उपकरण और निरंतरता के महत्व को शामिल किया गया है।",
+  "keywords": [
+    "अंग्रेजी प्रभावी ढंग से सीखें",
+    "अंग्रेजी सीखने की रणनीतियां",
+    "अंग्रेजी भाषा में डुबकी",
+    "व्यक्तिगत अंग्रेजी सीखना",
+    "अंग्रेजी सुनने का अभ्यास",
+    "अंग्रेजी बोलने की धाराप्रवाहता",
+    "अंग्रेजी पढ़ने की समझ",
+    "अंग्रेजी लेखन अभ्यास",
+    "अंग्रेजी व्याकरण टिप्स",
+    "अंग्रेजी शब्दावली निर्माण",
+    "भाषा सीखने की तकनीक",
+    "भाषा सीखने के लिए एआई",
+    "अंग्रेजी सीखने की निरंतरता"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+  },
+  "url": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike",
+  "inLanguage": "hi",
+  "articleSection": "अंग्रेजी सीखना",
+  "articleBody": "लक्ष्य निर्धारण, सक्रिय भागीदारी, भाषा में डूबना, व्यक्तिगत सीखना, सुनना, बोलना, पढ़ना, लिखना, व्याकरण, शब्दावली, प्रौद्योगिकी उपकरण और निरंतरता रणनीतियों को कवर करते हुए व्यावहारिक सलाह के साथ प्रभावी ढंग से अंग्रेजी सीखें।",
+  "about": {
+    "@type": "Thing",
+    "name": "अंग्रेजी भाषा सीखना"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "शिक्षा",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "संचार",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "कृत्रिम बुद्धिमत्ता",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "कृत्रिम बुद्धिमत्ता",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "अंग्रेजी भाषा में महारत हासिल करने के 12 सिद्ध तरीके",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "अंग्रेजी सीखने वाले"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "स्पष्ट लक्ष्य निर्धारित करना",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "सक्रिय भागीदारी महत्वपूर्ण है",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "स्वयं को भाषा में डुबोएं",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "व्यक्तिगत सीखना",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "अपने कान को प्रशिक्षित करें",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "बोलना शुरू करें!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "व्यापक रूप से पढ़ना",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "लेखन अभ्यास",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "व्याकरण मायने रखता है",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "शब्दावली शक्ति है",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "तकनीक आपका मित्र है",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike"
+      },
+      "name": "निरंतरता और दृढ़ता",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "सभी स्तर",
+  "educationalUse": "स्व-अध्ययन",
+  "interactivityType": "व्याख्यात्मक",
+  "learningResourceType": "मार्गदर्शिका",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
