--- a/zh-CN/xuexi-yingyu-gaoxiaolv.html
+++ b/zh-CN/xuexi-yingyu-gaoxiaolv.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "如何有效学习英语：我的学习之旅与建议",
-        "description": "通过我们基于实际经验的综合指南，发现有效学习英语的经验证明的策略。",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
-        },
-        "keywords": "有效学习英语, 英语学习策略, 英语沉浸, 英语学习资源"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "如何有效地学习英语：我的经历和建议",
+  "description": "基于真实经验的有效学习英语综合指南。涵盖目标设定、积极参与、沉浸式学习、个性化学习策略、听力、口语、阅读、写作、语法、词汇建设、包括人工智能助手在内的技术工具，以及坚持的重要性。",
+  "keywords": [
+    "有效学习英语",
+    "英语学习策略",
+    "英语沉浸式学习",
+    "个性化英语学习",
+    "英语听力练习",
+    "英语口语流利度",
+    "英语阅读理解",
+    "英语写作练习",
+    "英语语法技巧",
+    "英语词汇建设",
+    "语言学习技术",
+    "人工智能语言学习",
+    "英语学习坚持"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+  },
+  "url": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv",
+  "inLanguage": "zh-CN",
+  "articleSection": "英语学习",
+  "articleBody": "通过涵盖目标设定、积极参与、沉浸式学习、个性化学习、听力、口语、阅读、写作、语法、词汇、技术工具和坚持策略的实用建议，有效地学习英语。",
+  "about": {
+    "@type": "Thing",
+    "name": "英语语言学习"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "教育",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "通讯",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "人工智能",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "人工智能",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "掌握英语语言的12个经验证策略",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "英语学习者"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "设定明确目标",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "积极参与是关键",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "沉浸其中",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "个性化学习",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "训练你的耳朵",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "大胆开口！",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "广泛阅读",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "写作练习",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "语法很重要",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "词汇就是力量",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "科技是你的朋友",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv"
+      },
+      "name": "坚持与毅力",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "所有水平",
+  "educationalUse": "自学",
+  "interactivityType": "阐述性",
+  "learningResourceType": "指南",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
