--- a/es/aprender-ingles-eficientemente.html
+++ b/es/aprender-ingles-eficientemente.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "Cómo Aprender Inglés Eficientemente: Mi Experiencia y Consejos",
-        "description": "Descubre estrategias probadas para aprender inglés eficientemente con nuestra guía completa basada en experiencia del mundo real.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/es/aprender-ingles-eficientemente",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
-        },
-        "keywords": "aprender inglés eficientemente, estrategias para aprender inglés, inmersión en inglés, recursos para aprender inglés"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Cómo Aprender Inglés Eficientemente: Mi Experiencia y Consejos",
+  "description": "Una guía completa para aprender inglés de manera eficiente basada en experiencias reales. Cubre establecimiento de metas, participación activa, inmersión, estrategias de aprendizaje personalizadas, comprensión auditiva, expresión oral, lectura, escritura, gramática, construcción de vocabulario, herramientas tecnológicas incluyendo asistentes de IA, y la importancia de la constancia.",
+  "keywords": [
+    "aprender inglés eficientemente",
+    "estrategias de aprendizaje de inglés",
+    "inmersión en inglés",
+    "aprendizaje personalizado de inglés",
+    "práctica de comprensión auditiva en inglés",
+    "fluidez al hablar inglés",
+    "comprensión de lectura en inglés",
+    "práctica de escritura en inglés",
+    "consejos de gramática inglesa",
+    "construcción de vocabulario en inglés",
+    "tecnología para aprendizaje de idiomas",
+    "IA para aprendizaje de idiomas",
+    "constancia en el aprendizaje de inglés"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+  },
+  "url": "https://englishtests.online/es/aprender-ingles-eficientemente",
+  "inLanguage": "es",
+  "articleSection": "Aprendizaje de Inglés",
+  "articleBody": "Aprende a dominar el inglés de manera eficiente con consejos prácticos que cubren establecimiento de objetivos, participación activa, inmersión, aprendizaje personalizado, comprensión auditiva, expresión oral, lectura, escritura, gramática, vocabulario, herramientas tecnológicas y estrategias de constancia.",
+  "about": {
+    "@type": "Thing",
+    "name": "Aprendizaje del Idioma Inglés"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Educación",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Comunicación",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Inteligencia Artificial",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Inteligencia Artificial",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 Estrategias Probadas para Dominar el Idioma Inglés",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "Estudiantes de Inglés"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/es/aprender-ingles-eficientemente"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "Establecer Objetivos Claros",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "La Participación Activa es Clave",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "Sumérgete en el Idioma",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "Aprendizaje Personalizado",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "Entrena Tu Oído",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "¡Habla Sin Miedo!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "Lectura Amplia",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "Práctica de Escritura",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "La Gramática Importa",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "El Vocabulario es Poder",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "La Tecnología es tu Aliada",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/es/aprender-ingles-eficientemente"
+      },
+      "name": "Constancia y Persistencia",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Todos los Niveles",
+  "educationalUse": "Auto-estudio",
+  "interactivityType": "Expositivo",
+  "learningResourceType": "Guía",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
